<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="4dp"
    android:layout_marginBottom="8dp"
    android:background="@color/cardview_light_background"
    android:layout_gravity="center_horizontal">

    <TextView
        android:id="@+id/label_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:text="@string/order_by_lbl"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rb_group_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toRightOf="@id/label_1">

        <RadioButton
            android:id="@+id/rb_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:onClick="onOrderOptionsClicked"
            android:text="@string/date_lbl" />

        <RadioButton
            android:id="@+id/rb_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onOrderOptionsClicked"
            android:text="@string/rating_lbl" />
    </RadioGroup>

    <TextView
        android:id="@+id/label_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:text="@string/direction_lbl"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/rb_group_1"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rb_group_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toRightOf="@id/label_2">

        <RadioButton
            android:id="@+id/rb_asc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onOrderOptionsClicked"
            android:text="@string/ascending_lbl" />

        <RadioButton
            android:id="@+id/rb_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:onClick="onOrderOptionsClicked"
            android:text="@string/descending_lbl" />
    </RadioGroup>


</android.support.constraint.ConstraintLayout>